# citysim

./: .gitignore  .prettierignore  CITY_SOURCES.md  CLAUDE.md  IMPROVEMENTS.md  LETTER_TO_GEMINI.md  Makefile  PLAN.md  PLAN1.md  PLAN10.md  PLAN2-completed.md  PLAN3-completed.md  PLAN3.5.md  PLAN5.md  PLAN6.md  PLAN7.md  PLAN9-COMPLETED.md  PLAN9.md  README.md  TECH_ADVISOR_LETTER_FOLLOWUP.md  VERIFICATION.md  capture-flash-and-start.cjs  capture-loading-flash.cjs  create-icons.cjs  create-icons.html  create-png.py  curved-earth-test-metadata.json  debug-buildings-flat.cjs  debug-buildings.js  debug-camera.cjs  debug-console.cjs  debug-detailed.cjs  debug-persistent.cjs  debug-report.json  deckgl-test.html  dual-screenshot.cjs  enhanced-screenshot.cjs  eslint.config.js  final-sophisticated-cityscape-metadata.json  find-city.cjs  (+29 more)
.claude/: mcp.json
assets/: index--0__TiEg.js  index-DQp9GPIX.js  index-KdXplHOR.js  index-O2HNcLLc.js  index-kOJuLz90.css  urbansynth_sim-BtfpV5II.js  urbansynth_sim-ConcRA_4.js  urbansynth_sim-DSksVRWb.js  urbansynth_sim_bg-C7BoNG1-.wasm  urbansynth_sim_bg-DH2RkxTt.wasm
node_scripts/: analyze_terrain.cjs
playwright-report/: index.html
public/: model-terrain.json
scripts/: capture-debug.mjs  debug-hills-visibility.mjs  debug-terrain-fixed.mjs  deploy-pages.js  (+4 more)
wasm/: Cargo.toml
wasm/src/: adaptive_scaling.rs  agent.rs  benchmarking.rs  lib.rs  pathfinding.rs  performance.rs  simulation.rs  traffic.rs  world.rs
wasm/src/wasm/: package.json  urbansynth_sim.d.ts  urbansynth_sim.js  urbansynth_sim_bg.wasm  urbansynth_sim_bg.wasm.d.ts
(+166 files in other folders)
